# newstrade

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_daily_refresh.sh
newstrade/: __init__.py  agent_export.py  aggregate.py  ai_scoring.py  cli.py  config.py  db.py  ibkr_client.py  market_data.py  massive_market_data.py  massive_news.py  models.py  pipeline.py  reporting.py  security.py  time_utils.py  yahoo_news.py
newstrade/dashboard/: app.py
tests/: test_aggregate.py  test_ai_scoring.py  test_config.py  test_db_news_migration.py  test_market_data.py  test_massive_news.py  test_pipeline_news_merge.py  test_pipeline_scenarios.py  test_yahoo_news.py
